--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12437,6 +12437,16 @@ table th {
 }
 
 /* ------------------- start blood claction -----------------*/
+.blood_section {
+  padding-bottom: 50px;
+}
+
+@media only screen and (min-width: 991px) {
+  .blood_section {
+    padding-bottom: 100px;
+  }
+}
+
 .blood_list {
   background-repeat: no-repeat;
   background: center center;
