--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -418,7 +418,7 @@ $btn-hover-color:#ce5358;
 
 /* ------------------------ start header section -----------------*/
 
-.wrapper {
+.wrappers {
     .start-header {
         opacity: 1;
         transform: translateY(0);
