--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 /*!
  * Bootstrap v4.6.0 (https://getbootstrap.com/)
  * Copyright 2011-2021 The Bootstrap Authors
@@ -10842,6 +10843,12 @@ a.text-dark:hover, a.text-dark:focus {
     color: inherit;
     border-color: #dee2e6;
   }
+}
+
+/* ----------------------------- ‍Animated ----------------------*/
+:root {
+  --animate-duration: 800ms;
+  --animate-delay: 0.8s;
 }
 
 /* ------------------------Fonts variable----------------------- */
