--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -3,6 +3,14 @@
 //-------------------- font family --------------------
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
 
+/* ----------------------------- ‍Animated ----------------------*/
+
+:root {
+    --animate-duration: 800ms;
+    --animate-delay: 0.8s;
+}
+
+
 /* ------------------------Fonts variable----------------------- */
 
 $thin:100;
