--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10866,6 +10866,7 @@ a.text-dark:hover, a.text-dark:focus {
 /* ------------------------media mixin--------------------------- */
 /* ------------------------body css --------------------------- */
 body {
+  overflow-x: hidden;
   font-family: "Ubuntu", sans-serif;
   font-size: 16px;
   font-weight: 400;
@@ -10876,6 +10877,7 @@ body {
 
 .container {
   width: 1400px;
+  max-width: 100%;
   margin: auto;
   height: auto;
 }
