--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -68,6 +68,7 @@ $bg-secondary: #9b191900;
 
 body {
     // overflow: hidden;
+    overflow-x: hidden;
     font-family: $primary-font;
     font-size: 16px;
     font-weight: $regular;
@@ -80,7 +81,7 @@ body {
 
 .container {
     width: 1400px;
-    // max-width: 100%;
+    max-width: 100%;
     margin: auto;
     height: auto;
 }
