--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -798,8 +798,8 @@ $btn-hover-color:#ce5358;
         padding-top: 120px;
         padding-bottom: 40px;
         @include minwidth(576px) {
-            padding-top: 80px;
-            padding-bottom: 80px;
+            padding-top: 100px;
+            padding-bottom: 50px;
         }
         .bannar-text {
             width: 477px;
@@ -1077,6 +1077,83 @@ $bg-thard-color:#f0f8ff;
                 }
             }
         }
+    }
+}
+
+
+/* ------------------- start icu bad section -------------*/
+
+.icu_bad {
+    .searchbox {
+        .input-group {
+            width: 780px;
+            max-width: 100%;
+        }
+        .input-group-append {
+            .btn {
+                color: $white-color;
+                background-color: #5a6268;
+                border-color: #545b62;
+                height: 40px!important;
+            }
+        }
+        .form-control {
+            height: 40px!important;
+        }
+    }
+    padding: 70px 0px;
+    @include minwidth(991px) {
+        padding: 100px 0px 0px 0px;
+    }
+    .hospit_photo {
+        img {
+            width: 100%;
+        }
+    }
+    .icu_card {
+        padding: 15px 15px;
+        background: $bg-thard-color;
+        border-radius: 15px;
+        .h4 {
+            margin-bottom: 10px;
+            sub {
+                font-size: 14px;
+                color: $btn-color;
+            }
+        }
+        p {
+            a {
+                color: $green;
+                font-size: 18px;
+            }
+        }
+    }
+}
+
+@mixin bg_control {
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+}
+
+.icu_bad_get {
+    padding-top: 50px;
+    @include minwidth(991px) {
+        padding-top: 70px;
+    }
+    .inner_box_icu {
+        img {
+            width: 100%;
+        }
+        .para {
+            color: $primary-text-color;
+        }
+    }
+    .banglades_map {
+        @include background_img;
+    }
+    .text_scroll {
+        padding: 40px 0px;
     }
 }
 
@@ -1430,6 +1507,10 @@ $white_light:#f0f8ff;
 
 
 /* ------------------- start About US Page  -----------------*/
+
+.aboutussection {
+    background-size: contain!important;
+}
 
 .about_we_are {
     padding: 100px 0px;
